--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,11 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 # true? ?? ????? ????? ??? ????? ????.
 spring.jpa.open-in-view=true
+
+#파일 업ㄹ로드
+# 추가된 설정은 파일 하나의 최대 크기를 10MB로 제한하고 한 번에 전송하는 데이터는 30MB로 제한.
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
+#파일 업로드 위치
+com.spring.upload.path=upload
