--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,27 +7,27 @@ spring.datasource.username=javauser
 spring.datasource.password=java1234
 
 #jpa setting
-# ??????? ??? ???? DDL? ???? ??
+# 데이터베이스의 구조를 생성하는 DDL을 처리하는 옵션
 spring.jpa.hibernate.ddl-auto=update
 
-# JPA SPL ?? ???
+# JPA SQL 로그 활성화
 spring.jpa.show-sql=true
-# ???? ??? ????
+# 질의문이 한줄로 보여진다
 #logging.level.org.hibernate=info
 
-# JPA SQL ?? ?? ? ???? ??
+# JPA SQL 로그 출력 시 줄바꿈을 추가.
 spring.jpa.properties.hibernate.format_sql=true
 
-# JPA SQL ?? ??? SQL ???? ?? ?? ???? ??? ? ?? ?? ??.
+# JPA SQL 로그 출력 시 SQL 키워드에 색상 또는 스타일을 포함해 더 읽기 쉽게 출력.
 spring.jpa.properties.hibernate.highlight_sql=true
 
-#JPA SQL ?? ??? ??? ?? ?? ?? ????? ????
+# JPA SQL 로그 출력 시 매핑된 객체 정보 등을 주석 형태로 출력한다
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-# true? ?? ????? ????? ??? ????? ????.
+# true일 경우 트랜잭션이 완수되어도 영속성 컨텍스트는 살아있다.
 spring.jpa.open-in-view=true
 
-#파일 업ㄹ로드
+#파일 업로드
 # 추가된 설정은 파일 하나의 최대 크기를 10MB로 제한하고 한 번에 전송하는 데이터는 30MB로 제한.
 spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
